# Tarek

./: Makefile  config.status  gesthotexc.glade.bak  gesthotexc.gladep.bak  mygym.glade.bak
autom4te.cache/: requests
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  exc1.c  exc1.h  gesthotexc  hot1.c  hot1.h  hotel1.txt  infoagent.txt  interface.c  profil.c  profil.h  username.txt
src/.deps/: callbacks.Po  exc1.Po  hot1.Po  profil.Po
